--- a/app/assets/stylesheets/pages/_logform.scss
+++ b/app/assets/stylesheets/pages/_logform.scss
@@ -33,7 +33,7 @@
 
   }
 .log{
-  background-image: radial-gradient(650.649px at 50% 50%,#1f4456 0,#153342 100%), url('https://mathieuabeille.github.io/aca-consult/images/cockpit-09103586.jpg');;
+  background-image:  linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://mathieuabeille.github.io/aca-consult/images/cockpit-09103586.jpg'), ;
       min-height: 100vh;
 }
 
