--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <h4>Générez des contrats CDD en 1 clic</h4>
     <br/>
     <% if user_signed_in? %>
-      <%= link_to 'Nouveau Contrat', new_contrat_path, class: 'btn-medium btn-lg'  %>
+      <%= link_to 'Nouveau Contrat', contrats_path, class: 'btn-medium btn-lg'  %>
     <% else %>
     <%= link_to "Connexion", new_user_session_path, class: 'btn-medium btn-lg'  %>
     <% end %>
